fix overflow-x on markdown-generated tables

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -290,6 +290,17 @@ a.navbar-item {
     border-top: 1px dotted var(--backgroundAccentColor);
   }
 
+  // prevent overscroll on table that is generated by markdown:
+  // https://stackoverflow.com/a/62451601/3522314
+  table {
+    display: block;
+    max-width: -moz-fit-content;
+    max-width: fit-content;
+    margin: 0 auto;
+    overflow-x: auto;
+    white-space: nowrap;
+  }
+
   img {
     border: 1px solid var(--titleTextColor);
     display: block;
